# automate-aws-sso

./: .gitignore  README.md  aws_cli_utils.py  browser_utils.py  constants.py  credential_manager.py  main.py  pyproject.toml  test_chrome.py
